# Diploma

./: .dockerignore  .gitignore  CONTEXT.md  README.md  docker-compose.yaml  pyproject.toml
.codex/: config.toml
.github/: CODEOWNERS
api/: main.py  start-dev.ps1  start-dev.sh
configs/: market_rules_ua.yaml  real_data_afe_semantic_event_context_week3.yaml  real_data_afl_forecast_error_audit_week3.yaml  real_data_afl_hardening_week3.yaml  real_data_benchmark_week3.yaml  real_data_calibration_week4.yaml  real_data_dfl_data_expansion_week3.yaml  real_data_dfl_feature_aware_strict_failure_selector_week3.yaml  real_data_dfl_forecast_pipeline_truth_audit_week3.yaml  real_data_dfl_forecast_v1_week3.yaml  real_data_dfl_production_promotion_gate_week3.yaml  real_data_dfl_regime_gated_tft_selector_v2_week3.yaml  real_data_dfl_residual_dt_challenger_week3.yaml  real_data_dfl_schedule_value_learner_v2_robustness_week3.yaml  real_data_dfl_source_specific_challenger_week3.yaml  real_data_dfl_strict_challenger_week3.yaml  real_data_dfl_strict_failure_feature_audit_week3.yaml  real_data_dfl_strict_failure_selector_robustness_week3.yaml  real_data_dfl_strict_failure_selector_week3.yaml  real_data_dfl_trajectory_ranker_week3.yaml  real_data_dfl_trajectory_value_week3.yaml  real_data_dfl_ua_backfill_probe_week3.yaml  real_data_entsoe_neighbor_market_sample_week3.yaml  real_data_official_forecast_latest_screen_week3.yaml  real_data_official_forecast_rolling_scale_week3.yaml  real_data_official_forecast_rolling_week3.yaml  real_data_official_forecast_training_readiness_week3.yaml  real_data_official_global_panel_nbeatsx_backfill_week3.yaml  real_data_official_global_panel_nbeatsx_week3.yaml  real_data_official_schedule_value_promotion_week3.yaml  real_data_offline_dfl_action_target_week3.yaml  real_data_offline_dfl_decision_target_week3.yaml  real_data_offline_dfl_panel_strict_week3.yaml  real_data_offline_dfl_panel_week3.yaml
dashboard/: README.md  nuxt.config.ts  package-lock.json  package.json
dashboard/app/: app.vue
docker/: backend.Dockerfile
docs/: README.md
docs/sources/: README.md  architecture-review-source-capture-2026-05-11.md  cloud-gpu-training-offload-source-capture-2026-05-11.md  nixtla-neuralforecast-nbeatsx-source-capture-2026-05-11.md  official-forecast-exogenous-governance-source-capture-2026-05-11.md
docs/syllabus/: Покрокова інструкція для кожного етапу виконання дипломної роботи.md
docs/technical/: AFE_SEMANTIC_EVENT_CONTEXT.md  AFE_TO_AFL_TO_DFL_ROADMAP.md  API_ENDPOINTS.md  API_READ_MODEL_FRESHNESS_AND_PERFORMANCE.md  ARCHITECTURE_AND_DATA_FLOW.md  BACKEND_TELEMETRY_AND_TRAINING_SLICE.md  BASELINE_FREEZE.md  BASELINE_LP_AND_DATA_PIPELINE.md  BATTERY_DEGRADATION_AND_SIMULATION.md  CHART_STACK_DECISION.md  DATA_INGESTION_SOURCES.md  DFL_ACTION_CLASSIFIER_BASELINE.md  DFL_ACTION_LABEL_DATASET_CARD.md  DFL_AFL_FORECAST_ERROR_AUDIT.md  DFL_CLASSIFIER_FAILURE_ANALYSIS.md  DFL_DATA_EXPANSION_AND_ACTION_LABELS.md  DFL_DATA_RECOVERY_ROADMAP.md  DFL_FEATURE_AWARE_STRICT_FAILURE_SELECTOR.md  DFL_FORECAST_AFL_HARDENING.md  DFL_FORECAST_DECISION_LOSS_V1.md  DFL_FORECAST_PIPELINE_TRUTH_AUDIT.md  DFL_FULL_PROMOTION_EXPERIMENT_PLAN.md  DFL_OFFICIAL_SCHEDULE_VALUE_PROMOTION.md  DFL_PRODUCTION_PROMOTION_GATE.md  DFL_PROMOTION_GATE.md  DFL_READINESS_GATE.md  DFL_REGIME_GATED_TFT_SELECTOR_V2.md  DFL_RESIDUAL_DT_RESEARCH_CHALLENGER.md  DFL_SCHEDULE_VALUE_LEARNER_V2.md  DFL_SCHEDULE_VALUE_LEARNER_V2_ROBUSTNESS.md  DFL_SCHEDULE_VALUE_PRODUCTION_GATE.md  DFL_SOURCE_SPECIFIC_RESEARCH_CHALLENGER.md  DFL_STRICT_CHALLENGER_DIAGNOSTICS.md  DFL_STRICT_FAILURE_FEATURE_AUDIT.md  DFL_STRICT_FAILURE_SELECTOR.md  DFL_STRICT_FAILURE_SELECTOR_ROBUSTNESS.md  DFL_TRAINING_COMPUTE_OPTIONS.md  DFL_TRAJECTORY_FEATURE_RANKER.md  DFL_TRAJECTORY_VALUE_SELECTOR.md  DFL_VECTOR_EVIDENCE_REGISTRY.md  (+17 more)
reports/official_forecast_smoke/: official_forecast_smoke_20260506T051503Z_forecasts.csv  official_forecast_smoke_20260506T051503Z_summary.json
scripts/: battery_mqtt_ingestor.py  build_hf_official_schedule_value_job.py  materialize_dfl_vector_evidence_registry.py  materialize_offline_dfl_panel_evidence.py  materialize_research_layer_from_store.py  materialize_schedule_value_production_gate_registry.py  run-official-global-panel-batches.ps1  run-official-schedule-value-batches.ps1  run_official_forecast_smoke.py  simulated_battery_mqtt_publisher.py  verify.ps1
simulations/: tenants.yml
simulations/run-configs/: weather-location-experiment.yaml
src/gatekeeper/: schemas.py
src/smart_arbitrage/: __init__.py  definitions.py  market_rules.py  tenant_load.py
tests/: test_docker_compose_dagster.py  test_market_rules.py  test_project_entrypoints.py
tests/api/: test_main.py
tests/assets/: test_battery_telemetry_assets.py  test_dfl_research_assets.py  test_evidence_checks.py  test_gold_forecast_strategy.py  test_grid_event_assets.py  test_market_weather_sources.py  test_medallion_tags.py  test_simulated_trade_assets.py
tests/cloud/: test_hf_official_jobs.py
tests/decision_transformer/: test_policy.py  test_policy_training.py  test_trajectories.py
tests/dfl/: test_action_classifier.py  test_action_targeting.py  test_coverage_repair.py  test_data_expansion.py  test_decision_loss.py  test_decision_targeting.py  test_failure_analysis.py  test_forecast_dfl_v1.py  test_forecast_pipeline_truth.py  test_official_schedule_value.py  test_offline_dfl_experiment.py  test_offline_dfl_panel_strict.py  test_production_promotion_gate.py  test_promotion_gate.py  test_regime_gated_tft_selector.py  test_regret_weighted_pilot.py  test_relaxed_dispatch.py  test_residual_dt_challenger.py  test_schedule_value_learner.py  test_schedule_value_learner_robustness.py  test_schedule_value_promotion_gate.py  test_semantic_event_failure_audit.py  test_source_specific_challenger.py  test_strict_challenger.py  test_strict_failure_features.py  test_strict_failure_robustness.py  test_strict_failure_selector.py  test_training_examples.py  test_trajectory_ranker.py  test_trajectory_value.py  test_vector_evidence_registry.py
(+289 files in other folders)
