[project]
name = "smart-energy-arbitrage-2026"
version = "0.1.0"
description = "Decision-Focused Framework для енергоарбітражу BESS на ринку України"
requires-python = ">=3.11"
dependencies = [
    # Оркестрація та MLOps
    "dagster",                 # Основний оркестратор [1, 2]
    "dagster-webserver",       # UI для моніторингу активів [1]
    "dagster-aws",             # Інтеграція з S3 та AWS Lambda [3, 4]
    "dagster-dask",            # Розподілені обчислення для Optuna [5, 6]
    "mlflow",                  # Трекінг експериментів і regret-логування для MVP demo
    "beautifulsoup4",          # HTML parsing for refactored OREE market scraper
    "fastapi",                 # Lightweight API surface for tenant selection and experiment launch
    "psycopg[binary]",         # Lightweight Postgres gateway for operator-facing read models
    "pyyaml",                  # YAML-backed tenant and location config loading
    "uvicorn",                 # ASGI server for the FastAPI control plane
    
    # Обробка даних та Валідація
    "polars",                  # Швидка обробка в Silver-шарі [7, 8]
    "pydantic>=2.0",           # Детермінований Gatekeeper [9, 10]
    
    # AI та Диференційована Оптимізація
    "torch",                   # Моделі NBEATSx, TFT, Decision Transformer [11, 12]
    "cvxpylayers",             # Реалізація теореми про неявну функцію [13, 14]
    "cvxpy",                   # Опис задач оптимізації [13, 14]
    "optuna",                  # Гіперпараметрична оптимізація стратегій [15-17]
    
    # IoT та Інтеграція
    "paho-mqtt",               # Зв'язок з Victron/Huawei через MQTT [18, 19]
    "httpx",                   # Асинхронні запити до API Укренерго [20]
]

[project.optional-dependencies]
dev = [
    "dagster-dg-cli",          # Provides dg check/launch CLI used by project verification
    "mypy",                   # Static typing check for active backend Python code
    "pytest",                 # Focused API and asset behavior tests
    "ruff",                   # Fast linting for active backend Python code
    "types-PyYAML",            # Type stubs for tenant/location YAML loading
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp_dagster_home*",
    ".venv",
    "_legacy_smart-energy-ai",
    "dashboard",
    "data",
    "mlruns",
    "src/assets",
    "src/gatekeeper",
    "src/optimization",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
files = ["api", "scripts", "src/smart_arbitrage"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = [
    "^_legacy_smart-energy-ai/",
    "^dashboard/",
    "^data/",
    "^mlruns/",
    "^src/assets/",
    "^src/gatekeeper/",
    "^src/optimization/",
    "^tests/",
    "^\\.tmp_dagster_home",
    "^\\.venv/",
]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
norecursedirs = [
    "_legacy_smart-energy-ai",
    "data",
    ".venv",
    "mlruns",
]

[tool.dagster]
module_name = "smart_arbitrage.defs"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "smart_arbitrage"
